--- a/app/src/main/res/layout/dm.xml
+++ b/app/src/main/res/layout/dm.xml
@@ -25,6 +25,12 @@
             android:layout_weight="3"
             android:layout_height="wrap_content"
             android:background="@drawable/edittextstyle"/>
+        <ImageView
+            android:layout_width="45dp"
+            android:layout_height="fill_parent"
+            android:id="@+id/imagecalender"
+            android:src="@drawable/calendar"
+            android:onClick="datePick"/>
     </TableRow>
     <TableRow style="@style/dmTableRow">
         <TextView
