--- a/app/src/main/res/layout/mainview.xml
+++ b/app/src/main/res/layout/mainview.xml
@@ -41,7 +41,8 @@
             android:src="@drawable/record"
             android:layout_weight="1"
             android:id="@+id/button8"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:onClick="btnRecord"/>
         </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,6 +87,7 @@
             android:src="@drawable/information"
             android:layout_weight="1"
             android:id="@+id/button11"
+            android:onClick="btnLocation"
             android:layout_gravity="center_horizontal" />
 
         <ImageView
