--- a/app/src/main/res/layout/record_main.xml
+++ b/app/src/main/res/layout/record_main.xml
@@ -29,6 +29,7 @@
         android:src="@drawable/manage"
         android:id="@+id/imageViewmainmanage"
         android:layout_gravity="center_horizontal"
+        android:onClick="btnDmManage"
         />
 
     <ImageView
