--- a/app/src/main/res/layout/record_dmmanage.xml
+++ b/app/src/main/res/layout/record_dmmanage.xml
@@ -41,6 +41,7 @@
         android:src="@drawable/regular"
         android:id="@+id/imageViewregular"
         android:layout_gravity="center_horizontal"
+        android:onClick="btnDMCheckRegular"
         />
 
 
