--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -42,7 +42,8 @@
         android:layout_marginRight="40dp"
         android:src="@drawable/reportproblem"
         android:id="@+id/button21"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="btnSettingToSettingRequest"/>
 
     <ImageView
         android:layout_width="wrap_content"
