--- a/app/src/main/res/layout/shoot_code_infor.xml
+++ b/app/src/main/res/layout/shoot_code_infor.xml
@@ -1,52 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:paddingBottom="15dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingTop="15dp"
+    android:background="#feffd6">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="商家："
-        android:id="@+id/textView25"
-        android:layout_marginTop="20dp" />
+        android:text="品名："
+        android:layout_margin="20dp"
+        android:layout_alignParentLeft="true"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="品項："
-        android:id="@+id/textView26"
-        android:layout_marginTop="10dp" />
+        android:text="食物"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:layout_centerHorizontal="true"/>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="285dp"
-        android:id="@+id/imageView2"
-        android:src="@drawable/tablesample" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/detail"
+            android:layout_marginTop="30dp"
+            android:id="@+id/imageView6" />
+
+    </LinearLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="133dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        >
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="上一步"
-            android:id="@+id/button16"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="下一步"
-            android:id="@+id/button18"
-            android:layout_alignTop="@+id/button16"
-            android:layout_alignParentEnd="true"
-            android:onClick="btnShootInfoNext" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/home"
+            android:id="@+id/home"
+            android:layout_alignParentLeft="true"
+            android:onClick="btnHome"/>
+
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="發佈"
+            android:src="@drawable/next"
+            android:id="@+id/button17"
+            android:layout_alignParentRight="true"
+            android:onClick="btnShootPhotoPost" />
 
     </RelativeLayout>
 
-</LinearLayout>
+
+
+</RelativeLayout>
