--- a/app/src/main/res/layout/shoot_main.xml
+++ b/app/src/main/res/layout/shoot_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         >
+        <!--
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -24,10 +25,11 @@
             android:onClick="btnCodeOnClick"
             android:layout_weight="1"
             />
+            -->
     </LinearLayout>
 
 
-        <com.dlazaro66.qrcodereaderview.QRCodeReaderView
+        <tw.sunny.finalproject.module.QRCodeReaderView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/qr"
@@ -41,6 +43,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="拍照"/>
+            android:onClick="btnTakePhotoClick"
+            android:text="我要拍照"/>
     </LinearLayout>
 </LinearLayout>
